tests/fixtures/invalid/bytes_invalid_method.py
# Test invalid bytes method
x: bytes = b"hello"
print(x.nonexistent())
